tests/ui/traits/const-traits/predicate-entailment-fails.stderr
error[E0276]: impl has stricter requirements than trait
  --> $DIR/predicate-entailment-fails.rs:14:31
   |
LL |     type Bar<T> where T: ~const Bar;
   |     ----------- definition of `Bar` from trait
...
LL |     type Bar<T> = () where T: const Bar;
   |                               ^^^^^^^^^ impl has extra requirement `T: const Bar`

error[E0276]: impl has stricter requirements than trait
  --> $DIR/predicate-entailment-fails.rs:17:26
   |
LL |     fn foo<T>() where T: ~const Bar;
   |     -------------------------------- definition of `foo` from trait
...
LL |     fn foo<T>() where T: const Bar {}
   |                          ^^^^^^^^^ impl has extra requirement `T: const Bar`

error[E0276]: impl has stricter requirements than trait
  --> $DIR/predicate-entailment-fails.rs:28:31
   |
LL |     type Bar<T> where T: Bar;
   |     ----------- definition of `Bar` from trait
...
LL |     type Bar<T> = () where T: const Bar;
   |                               ^^^^^^^^^ impl has extra requirement `T: const Bar`

error[E0276]: impl has stricter requirements than trait
  --> $DIR/predicate-entailment-fails.rs:31:26
   |
LL |     fn foo<T>() where T: Bar;
   |     ------------------------- definition of `foo` from trait
...
LL |     fn foo<T>() where T: const Bar {}
   |                          ^^^^^^^^^ impl has extra requirement `T: const Bar`

error[E0276]: impl has stricter requirements than trait
  --> $DIR/predicate-entailment-fails.rs:35:31
   |
LL |     type Bar<T> where T: Bar;
   |     ----------- definition of `Bar` from trait
...
LL |     type Bar<T> = () where T: ~const Bar;
   |                               ^^^^^^^^^^ impl has extra requirement `T: ~const Bar`

error[E0276]: impl has stricter requirements than trait
  --> $DIR/predicate-entailment-fails.rs:38:26
   |
LL |     fn foo<T>() where T: Bar;
   |     ------------------------- definition of `foo` from trait
...
LL |     fn foo<T>() where T: ~const Bar {}
   |                          ^^^^^^^^^^ impl has extra requirement `T: ~const Bar`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0276`.
